cmake_minimum_required(VERSION 3.14)

project(dense_hash_map_tests)

option(ENABLE_ASAN "Enable ASAN during the tests" OFF)
option(ENABLE_UBASAN "Enable UBASAN during the tests" OFF)

add_executable(dense_hash_map_tests src/dense_hash_map_tests.cpp)
target_link_libraries(dense_hash_map_tests Catch2::Catch2)
target_link_libraries(dense_hash_map_tests dense_hash_map)

if(MSVC)
    target_compile_options(dense_hash_map_tests PRIVATE /W4 /WX)
else()
    set(WARNING_UNIX -Wall -Wextra -pedantic -Werror)
    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        list(APPEND WARNING_UNIX)
    endif()
    target_compile_options(dense_hash_map_tests PRIVATE ${WARNING_UNIX})
endif()

if(ENABLE_ASAN)
    message(STATUS "ASAN enabled")
    target_compile_options(dense_hash_map_tests PRIVATE -fsanitize=address -fno-omit-frame-pointer)
    target_link_libraries(dense_hash_map_tests -fsanitize=address)
elseif(ENABLE_UBSAN)
    message(STATUS "UBSAN enabled")
    target_compile_options(dense_hash_map_tests PRIVATE -fsanitize=undefined -fno-omit-frame-pointer)
    target_link_libraries(dense_hash_map_tests -fsanitize=undefined)
endif() 
